more corrections to hover for arrow on scrollbar

--- a/css/tailwind/products-output.css
+++ b/css/tailwind/products-output.css
@@ -184,14 +184,8 @@
   .absolute {
     position: absolute;
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\.5 {
     top: calc(var(--spacing) * 1.5);
-  }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
   }
   .right-1\.5 {
     right: calc(var(--spacing) * 1.5);
@@ -204,9 +198,6 @@
   }
   .hidden {
     display: none;
-  }
-  .table {
-    display: table;
   }
   .aspect-4\/5 {
     aspect-ratio: 4/5;
@@ -223,9 +214,6 @@
   .max-h-250 {
     max-height: calc(var(--spacing) * 250);
   }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
   .w-3\/4 {
     width: calc(3/4 * 100%);
   }
@@ -234,12 +222,6 @@
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -326,20 +308,11 @@
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
-  }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
-  .pt-2 {
-    padding-top: calc(var(--spacing) * 2);
-  }
   .pt-2\.5 {
     padding-top: calc(var(--spacing) * 2.5);
-  }
-  .pb-7 {
-    padding-bottom: calc(var(--spacing) * 7);
   }
   .pb-7\.5 {
     padding-bottom: calc(var(--spacing) * 7.5);
@@ -364,13 +337,6 @@
   }
   .text-dark {
     color: var(--color-dark);
-  }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .hover\:cursor-grab {
     &:hover {
@@ -540,15 +506,6 @@
       font-size: 28px;
     }
   }
-  .hover\:lg\:flex {
-    &:hover {
-      @media (hover: hover) {
-        @media (width >= 64rem) {
-          display: flex;
-        }
-      }
-    }
-  }
 }
 @layer base {
   @font-face {
@@ -587,6 +544,11 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
     background-color: var(--color-light);
+    &:hover {
+      @media (hover: hover) {
+        cursor: pointer;
+      }
+    }
     @media (width >= 48rem) {
       width: calc(var(--spacing) * 14);
     }
@@ -656,11 +618,6 @@
   }
 }
 @property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
-@property --tw-outline-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
@@ -749,7 +706,6 @@
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
-      --tw-outline-style: solid;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
